# pytorch-specialisation

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
1. pytorch fundamental/module1_getting_started_with_pytorch/1. building_simple_neural_network/: C1_M1_Lab_1_simple_nn.ipynb
1. pytorch fundamental/module1_getting_started_with_pytorch/2. using_activation_function/: C1_M1_Lab_2_activation_functions.ipynb
1. pytorch fundamental/module1_getting_started_with_pytorch/3. core_tensors/: C1_M1_Lab_3_tensors.ipynb  data.csv
1. pytorch fundamental/module1_getting_started_with_pytorch/4. assignment/: C1M1_Assignment.ipynb  data_with_features.csv
1. pytorch fundamental/module2_pytorch_workflow/1. image_classifier/: C1_M2_Lab_1_mnist_classifier.ipynb
1. pytorch fundamental/module2_pytorch_workflow/2. assignment/: C1M2_Assignment.ipynb  unittests_utils.py
1. pytorch fundamental/module3_data_management/2. assignment/: C1M3_Assignment.ipynb
1. pytorch fundamental/module3_data_management/2. assignment/plants_dataset/: df_labels.csv  df_labels_orig.csv
1. pytorch fundamental/module4_core_neural_network/1. cnn nature classification/: C1_M4_Lab_1_cnn_nature_classifier.ipynb
1. pytorch fundamental/module4_core_neural_network/2. assignment/: C1M4_Assignment.ipynb
1. pytorch fundamental/module4_core_neural_network/2. model_debugging/: C1_M4_Lab_2_debugging.ipynb
