[project]
name = "pytorch-specialisation"
version = "1.0.0"
description = "DeepLearning.AI PyTorch for Deep Learning Professional Certificate - Course Materials and Assignments"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Imran", email = "your.email@example.com"}
]
keywords = ["pytorch", "deep-learning", "machine-learning", "neural-networks", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=2.3.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "matplotlib>=3.9.0",
    "pillow>=11.3.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/pytorch-specialisation"
"Course" = "https://learn.deeplearning.ai/specializations/pytorch-for-deep-learning-professional-certificate"
"Repository" = "https://github.com/yourusername/pytorch-specialisation"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
